@@ -13,7 +13,7 @@ BEGIN {
 use PPI;
 
 # Execute the tests
-use Test::More tests => 9;
+use Test::More tests => 19;
 
 # =begin testing literal 9
 {
@@ -31,6 +31,64 @@ while ( @pairs ) {
 	isa_ok( $word, 'PPI::Token::Word' );
 	is( $word->literal, $to, "The source $from becomes $to ok" );
 }
+}
+
+
+
+# =begin testing method_call 10
+{
+my $Document = PPI::Document->new(\<<'END_PERL');
+indirect $foo;
+$bar->method_with_parentheses();
+print SomeClass->method_without_parentheses + 1;
+sub_call();
+$baz->chained_from->chained_to;
+END_PERL
+
+isa_ok( $Document, 'PPI::Document' );
+my $words = $Document->find('Token::Word');
+is( scalar @{$words}, 8, 'Found the 8 test words' );
+my %words = map { $_ => $_ } @{$words};
+is(
+	scalar $words{indirect}->method_call(),
+	undef,
+	'Indirect notation is unknown.',
+);
+is(
+	scalar $words{method_with_parentheses}->method_call(),
+	1,
+	'Method with parentheses is true.',
+);
+is(
+	scalar $words{method_without_parentheses}->method_call(),
+	1,
+	'Method without parentheses is true.',
+);
+is(
+	scalar $words{print}->method_call(),
+	undef,
+	'Plain print is unknown.',
+);
+is(
+	scalar $words{SomeClass}->method_call(),
+	undef,
+	'Class in class method call is unknown.',
+);
+is(
+	scalar $words{sub_call}->method_call(),
+	0,
+	'Subroutine call is false.',
+);
+is(
+	scalar $words{chained_from}->method_call(),
+	1,
+	'Method that is chained from is true.',
+);
+is(
+	scalar $words{chained_to}->method_call(),
+	1,
+	'Method that is chained to is true.',
+);
 }
 
 
